--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
 
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/PapersLight.svg" />
 
-    
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <title>Portafolio</title>
