--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <style>
+      body::-webkit-scrollbar {
+        display: none;
+      }
+    </style>
   </body>
 </html>
